--- a/IT251_Pandas_Test-ANSWERS.ipynb
+++ b/IT251_Pandas_Test-ANSWERS.ipynb
@@ -72,11 +72,11 @@
     "1.Read the Dataset  <br>\n",
     "</p>\n",
     "\n",
-    "<span style=\"font-size:1.5em;\">1. Use pandas to read the three csv files into three dataframes. (4 marks)\n",
+    "<span style=\"font-size:1.5em;\">1.1 Use pandas to read the three csv files into three dataframes. (4 marks)\n",
     "\n",
-    "<span style=\"font-size:1.5em;\">2. Print the shape of each of the dataframes. (2 marks)\n",
+    "<span style=\"font-size:1.5em;\">1.2 Print the shape of each of the dataframes. (2 marks)\n",
     "\n",
-    "<span style=\"font-size:1.5em;\">3. Print the first five rows of each of the dataframes. (2 marks)\n"
+    "<span style=\"font-size:1.5em;\">1.3 Print the first five rows of each of the dataframes. (2 marks)\n"
    ]
   },
   {
@@ -387,9 +387,9 @@
    "source": [
     "<h1 style=\"font-size:2em;color:#2467C0\">2. Descriptive Statistics</h1>\n",
     "\n",
-    "<span style=\"font-size:1.5em;\">1. Find out the basic statistics(mean,standard deviation,25%) of book ratings dataframe (2 marks)\n",
+    "<span style=\"font-size:1.5em;\">2.1 Find out the basic statistics(mean,standard deviation,25%) of book ratings dataframe (2 marks)\n",
     "\n",
-    "<span style=\"font-size:1.5em;\">2. Find the mode of book ratings dataframe (2 marks)"
+    "<span style=\"font-size:1.5em;\">2.2 Find the mode of book ratings dataframe (2 marks)"
    ]
   },
   {
@@ -515,9 +515,9 @@
    "source": [
     "<h1 style=\"font-size:2em;color:#2467C0\">3. Data Cleaning: Handling Missing Data</h1>\n",
     "\n",
-    "<span style=\"font-size:1.5em;\">1. Find out if there is any null values in book ratings, users and books datasets (3 marks)\n",
+    "<span style=\"font-size:1.5em;\">3.1 Find out if there is any null values in book ratings, users and books datasets (3 marks)\n",
     "\n",
-    "<span style=\"font-size:1.5em;\">2. Delete any rows with null Values (3 marks)"
+    "<span style=\"font-size:1.5em;\">3.2 Delete any rows with null Values (3 marks)"
    ]
   },
   {
@@ -618,9 +618,9 @@
    "source": [
     "<h1 style=\"font-size:2em;color:#2467C0\">4. Data Visualization</h1>\n",
     "\n",
-    "<span style=\"font-size:1.5em;\">4a. Plot a histogram of 'Book-Rating' column in book ratings dataframe (3 marks)\n",
+    "<span style=\"font-size:1.5em;\">4.1 Plot a histogram of 'Book-Rating' column in book ratings dataframe (3 marks)\n",
     "\n",
-    "<span style=\"font-size:1.5em;\">4b. Plot a boxplot of 'Book-Rating' column in book ratings dataframe (3 marks)\n"
+    "<span style=\"font-size:1.5em;\">4.2 Plot a boxplot of 'Book-Rating' column in book ratings dataframe (3 marks)\n"
    ]
   },
   {
